import attributeRepo, {IAttributeTypeRepo} from './attributeRepo';
import {Database} from 'arangojs';
import {AttributeTypes, AttributeFormats} from '../_types/attribute';

describe('AttributeRepo', () => {
    const mockAttrTypeRepo: IAttributeTypeRepo = {
        createValue: null,
        updateValue: null,
        deleteValue: null,
        getValues: null,
        getValueById: null,
        filterQueryPart: null,
        clearAllValues: null
    };

    describe('getAttribute', () => {
        test('Should return all libs if no filter', async function() {
            const mockDbServ = {db: null, execute: global.__mockPromise([])};
            const mockDbUtils = {cleanup: jest.fn()};
            const attrRepo = attributeRepo(mockDbServ, mockDbUtils);

            const lib = await attrRepo.getAttributes();

            expect(mockDbServ.execute.mock.calls.length).toBe(1);
            expect(typeof mockDbServ.execute.mock.calls[0][0]).toBe('object'); // AqlQuery
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatch(/FOR a IN core_attributes/);
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatch(/(?!FILTER)/);
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatchSnapshot();
            expect(mockDbServ.execute.mock.calls[0][0].bindVars).toMatchSnapshot();
        });

        test('Should filter', async function() {
            const mockDbServ = {db: null, execute: global.__mockPromise([])};
            const mockCleanupRes = {id: 'test_attribute', system: false};
            const mockConvertRes = {_key: 'test_attribute', system: false};
            const mockDbUtils = {
                cleanup: jest.fn().mockReturnValue(mockCleanupRes),
                convertToDoc: jest.fn().mockReturnValue({_key: 'test', system: false})
            };
            const attrRepo = attributeRepo(mockDbServ, mockDbUtils);

            const lib = await attrRepo.getAttributes({id: 'test'});

            expect(mockDbServ.execute.mock.calls[0][0].query).toMatch(/(FILTER){1}/);
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatchSnapshot();
            expect(mockDbServ.execute.mock.calls[0][0].bindVars).toMatchSnapshot();
        });

        test('Should return an empty array if no results', async function() {
            const mockDbServ = {db: null, execute: global.__mockPromise([])};

            const mockCleanupRes = {id: 'test_attribute'};
            const mockDbUtils = {
                cleanup: jest.fn().mockReturnValue(mockCleanupRes),
                convertToDoc: jest.fn().mockReturnValue({_key: 'test'})
            };

            const attrRepo = attributeRepo(mockDbServ, mockDbUtils);

            const libs = await attrRepo.getAttributes({id: 'test'});

            expect(libs).toBeInstanceOf(Array);
            expect(libs.length).toBe(0);
        });

        test('Should format returned values', async function() {
            const mockLibList = [{_key: 'test', _id: 'core_attributes/test', _rev: '_WR0JkDW--_'}];
            const mockDbServ = {db: null, execute: global.__mockPromise(mockLibList)};

            const mockCleanupRes = [{id: 'test', system: false}];
            const mockDbUtils = {
                cleanup: jest.fn().mockReturnValue(mockCleanupRes),
                convertToDoc: jest.fn().mockReturnValue({_key: 'test', system: false})
            };
            const attrRepo = attributeRepo(mockDbServ, mockDbUtils);

            const libs = await attrRepo.getAttributes({id: 'test'});

            expect(mockDbUtils.cleanup.mock.calls.length).toBe(1);
            expect(libs.length).toEqual(1);
            expect(libs[0]).toMatchObject([{id: 'test', system: false}]);
        });
    });

    describe('updateAttribute', () => {
        const docAttrData = {
            _key: 'test_attribute',
            system: true,
            format: 'text',
            type: 'standard',
            label: {fr: 'Test'}
        };

        const attrData = {
            id: 'test_attribute',
            system: true,
            label: {fr: 'Test'},
            format: AttributeFormats.TEXT,
            type: AttributeTypes.ADVANCED
        };

        test('Should update an existing attribute', async function() {
            const mockDbServ = {
                db: new Database(),
                execute: global.__mockPromise([docAttrData])
            };

            const mockCleanupRes = attrData;
            const mockDbUtils = {
                cleanup: jest.fn().mockReturnValue(mockCleanupRes),
                convertToDoc: jest.fn().mockReturnValue(docAttrData)
            };

            const attrRepo = attributeRepo(mockDbServ, mockDbUtils);

            const updatedAttr = await attrRepo.updateAttribute(attrData);
            expect(mockDbServ.execute.mock.calls.length).toBe(1);
            expect(typeof mockDbServ.execute.mock.calls[0][0]).toBe('object'); // AqlQuery
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatch(/^UPDATE/);
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatchSnapshot();
            expect(mockDbServ.execute.mock.calls[0][0].bindVars).toMatchSnapshot();

            expect(updatedAttr).toMatchObject(attrData);
        });
    });

    describe('createAttribute', () => {
        const docAttrData = {_key: 'test_attribute', system: true, format: 'text', type: 'standard'};
        const attrData = {
            id: 'test_attribute',
            system: true,
            label: {fr: 'Test'},
            format: AttributeFormats.TEXT,
            type: AttributeTypes.ADVANCED
        };

        test('Should create a new attribute', async function() {
            const mockDbServ = {
                db: new Database(),
                execute: global.__mockPromise([docAttrData])
            };

            const mockCleanupRes = attrData;
            const mockDbUtils = {
                cleanup: jest.fn().mockReturnValue(mockCleanupRes),
                convertToDoc: jest.fn().mockReturnValue(docAttrData)
            };

            const attrRepo = attributeRepo(mockDbServ, mockDbUtils);

            const createdAttr = await attrRepo.createAttribute(attrData);
            expect(mockDbServ.execute.mock.calls.length).toBe(1);
            expect(typeof mockDbServ.execute.mock.calls[0][0]).toBe('object'); // AqlQuery
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatch(/^INSERT/);
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatchSnapshot();
            expect(mockDbServ.execute.mock.calls[0][0].bindVars).toMatchSnapshot();

            expect(createdAttr).toMatchObject(attrData);
        });
    });

    describe('deleteAttribute', () => {
        const attrData = {
            id: 'test_attribute',
            system: false,
            label: {fr: 'Test'},
            format: AttributeFormats.TEXT,
            type: AttributeTypes.SIMPLE
        };

        const docAttrData = {
            _key: 'test_attribute',
            _id: 'core_attributes/test_attribute',
            _rev: '_WSgDYea--_',
            format: 'numeric',
            label: {en: 'Test', fr: 'Test'},
            system: false,
            type: 'index'
        };

        test('Should delete an attribute and return deleted attribute', async function() {
            const mockDbServ = {
                db: new Database(),
                execute: jest
                    .fn()
                    .mockReturnValueOnce([])
                    .mockReturnValueOnce(Promise.resolve([docAttrData]))
            };

            const mockCleanupRes = attrData;
            const mockDbUtils = {
                cleanup: jest.fn().mockReturnValue(attrData),
                convertToDoc: jest.fn().mockReturnValue(docAttrData)
            };

            const mockTypeRepo = {
                ...mockAttrTypeRepo,
                clearAllValues: global.__mockPromise(true)
            };

            const attrRepo = attributeRepo(mockDbServ, mockDbUtils);
            attrRepo.getAttributes = global.__mockPromise([attrData]);

            const deleteRes = await attrRepo.deleteAttribute(attrData, mockTypeRepo);

            expect(mockDbServ.execute.mock.calls.length).toBe(2);

            expect(typeof mockDbServ.execute.mock.calls[0][0]).toBe('object'); // AqlQuery
            expect(typeof mockDbServ.execute.mock.calls[1][0]).toBe('object'); // AqlQuery
            expect(mockDbServ.execute.mock.calls[0][0].query).toMatchSnapshot();
            expect(mockDbServ.execute.mock.calls[0][0].bindVars).toMatchSnapshot();

            expect(mockDbServ.execute.mock.calls[1][0].query).toMatch(/^REMOVE/);
            expect(mockDbServ.execute.mock.calls[1][0].query).toMatchSnapshot();
            expect(mockDbServ.execute.mock.calls[1][0].bindVars).toMatchSnapshot();
        });
    });

    describe('getLibrariesUsingAttribute', () => {
        test('Should get list of libraries', async () => {
            const mockQueryRes = [
                {
                    _key: 'users',
                    _id: 'core_libraries/users',
                    _rev: '_WSfp4UC--_',
                    label: {en: 'Users', fr: 'Utilisateurs'},
                    system: true
                },
                {
                    _key: 'products',
                    _id: 'core_libraries/products',
                    _rev: '_WSfp4UG--_',
                    label: {en: 'Products', fr: 'Produits'},
                    system: false
                }
            ];
            const mockDbServ = {
                db: new Database(),
                execute: global.__mockPromise(mockQueryRes)
            };

            const mockCleanupRes = [
                {
                    id: 'users',
                    label: {en: 'Users', fr: 'Utilisateurs'},
                    system: true
                },
                {
                    id: 'products',
                    label: {en: 'Products', fr: 'Produits'},
                    system: false
                }
            ];
            const mockDbUtils = {
                cleanup: jest
                    .fn()
                    .mockReturnValueOnce(mockCleanupRes[0])
                    .mockReturnValueOnce(mockCleanupRes[1])
            };

            const attrRepo = attributeRepo(mockDbServ, mockDbUtils);

            const attrLibs = await attrRepo.getLibrariesUsingAttribute({id: 'test_attr', type: AttributeTypes.SIMPLE});
            expect(mockDbServ.execute.mock.calls.length).toBe(1);

            // First call is to insert library
            expect(mockDbServ.execute.mock.calls[0][0]).toMatch(/IN 1 INBOUND/);
            expect(mockDbServ.execute.mock.calls[0][0]).toMatchSnapshot();

            expect(attrLibs).toEqual(mockCleanupRes);
        });
    });
});
