// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttributeRepo createAttribute Should create a new attribute 1`] = `"INSERT @value0 IN @@value1 RETURN NEW"`;

exports[`AttributeRepo createAttribute Should create a new attribute 2`] = `
Object {
  "@value1": "core_attributes",
  "value0": Object {
    "_key": "test_attribute",
    "format": "text",
    "label": Object {
      "en": "",
      "fr": "",
    },
    "system": true,
    "type": "standard",
  },
}
`;

exports[`AttributeRepo deleteAttribute Should delete an attribute and return deleted attribute 1`] = `
"
                    FOR e IN @@value0
                        FILTER e._to == @value1
                        REMOVE e IN @@value0
                    "
`;

exports[`AttributeRepo deleteAttribute Should delete an attribute and return deleted attribute 2`] = `
Object {
  "@value0": "core_edge_libraries_attributes",
  "value1": "core_attributes/test_attribute",
}
`;

exports[`AttributeRepo deleteAttribute Should delete an attribute and return deleted attribute 3`] = `"REMOVE @value0 IN @@value1 RETURN OLD"`;

exports[`AttributeRepo deleteAttribute Should delete an attribute and return deleted attribute 4`] = `
Object {
  "@value1": "core_attributes",
  "value0": Object {
    "_key": "test_attribute",
  },
}
`;

exports[`AttributeRepo getAttribute Should filter 1`] = `"FOR a IN core_attributes FILTER a.@filterKey0 == @filterValue0 FILTER a.@filterKey1 == @filterValue1 RETURN a"`;

exports[`AttributeRepo getAttribute Should filter 2`] = `
Object {
  "filterKey0": "_key",
  "filterKey1": "system",
  "filterValue0": "test",
  "filterValue1": "false",
}
`;

exports[`AttributeRepo getAttribute Should return all libs if no filter 1`] = `"FOR a IN core_attributes RETURN a"`;

exports[`AttributeRepo getAttribute Should return all libs if no filter 2`] = `Object {}`;

exports[`AttributeRepo getLibrariesUsingAttribute Should get list of libraries 1`] = `
"
                FOR v
                IN 1 INBOUND 'core_attributes/test_attr'
                core_edge_libraries_attributes
                RETURN v
            "
`;

exports[`AttributeRepo updateAttribute Should update an existing attribute 1`] = `"UPDATE @value0 IN @@value1 RETURN NEW"`;

exports[`AttributeRepo updateAttribute Should update an existing attribute 2`] = `
Object {
  "@value1": "core_attributes",
  "value0": Object {
    "_key": "test_attribute",
    "format": "text",
    "label": Object {
      "fr": "Test",
    },
    "system": true,
    "type": "standard",
  },
}
`;
